# subprocess

./: .clang-format  .gitignore  CMakeLists.txt  ProcessInput.cpp  ProcessInput.h  ProcessOutput.cpp  ProcessOutput.h  ProcessPipeInput.cpp  ProcessPipeInput.h  ProcessPipeOutput.cpp  ProcessPipeOutput.h  README.md  SubProcess.cpp  SubProcess.h  main.cpp
util/: LinuxErrorHandler.cpp  LinuxErrorHandler.h  StatusOr.cpp  StatusOr.h
